--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -13,8 +13,8 @@
             <!--[ngStyle]="{ width: '230mm', height: '327mm' , height: '297mm' }"-->
                
             <div class="modal-header card-header">
-                <button class="btn btn-add" (click)="BackRoot()">
-                    <i class="fa fa-angle-left"> กลับ</i>
+                <button class="btn btn-danger" (click)="BackRoot()">
+                    <i class="fa fa-angle-left"></i>
                 </button>
                 <div class="card-title" id="myModalLabel">
                     <p style="margin: 0;" >เนื้อหาเอกสาร</p>
