--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -30,9 +30,9 @@
     </div>
   </div> -->
 
+  <div class="container-fluid">
 
 
-  <div class="global-sales">
     <div class="BoxTotal">
 
       <div class="row">
@@ -91,7 +91,7 @@
               </div>
       
               <div class="col-md-3 align-self-end">
-                <button type="submit" class="btn btn-add mt-4">
+                <button type="submit" class="btn btn-add ">
                   ดูข้อมูล
                 </button>
               </div>
