--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -33,6 +33,10 @@ h4{
   border-radius: 10px;
 
 }
+.card-header a{
+  font-weight: 900;
+  font-size: 18px;
+}
 
 
 /* 5. Update .card-header-danger background color  linear-gradient(60deg,  rgb(255, 209, 0), #fcffc2) */
@@ -134,13 +138,23 @@ i{
   display: flex;
   align-items: center;
   padding-left: 60px;
+
+}
+:host ::ng-deep .user-content .col-md-9{
+  font-size: 16px;
 }
 :host ::ng-deep .EditModal-content .col-md-3{
   display: flex;
   align-items: center;
   padding: 15px;
-}
 
+}
+.info-fontSize{
+  font-size: 16px
+}
+label{
+  font-size: 16px
+}
 .title{
   display: flex;
   padding: 10px;
@@ -187,6 +201,7 @@ i{
   padding: 10px;
   font-family: 'Sarabun',sans-serif;
 }
+
 .footer-content{
   display: flex;
   justify-content: center;
@@ -207,6 +222,7 @@ i{
 
   justify-content: center;
   flex-direction: column;
+  padding-left: 50px;
 }
 
 
@@ -217,12 +233,12 @@ justify-content: center;
 
 }
 .card-avatar  .upload{
-  position: absolute;
+  position: relative;
   display: flex;
   height: 40px;
   width: 40px;
-  bottom: 5px; /* ติดกับขอบล่างของภาพ */
-  right: 30px;
+  bottom: 50px; /* ติดกับขอบล่างของภาพ */
+  right: -190px;
   align-items: center;
   justify-content: center;
 
@@ -293,6 +309,7 @@ justify-content: center;
   background: white;
   padding: 20px;
   border-radius: 8px;
+  transform: translateY(20%);
   width: 500px;
   height: 450px;
   position: relative;
@@ -316,14 +333,26 @@ justify-content: center;
   background: white;
   padding: 20px;
   border-radius: 8px;
-  width: 500px;
+  width: 510px;
   height: 650px;
+  transform: translateY(-10%); /* เริ่มจากนอกจอด้านบน */
+  animation: slideDown 0.5s ease forwards;
 
 }
 .no-scroll {
   overflow: hidden;
 }
 
+@keyframes slideDown {
+  from {
+    transform: translateY(-50%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
 
 
