--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -5,6 +5,7 @@
       <li class="breadcrumb-item active"><a aria-current="page" > รายงานการสร้างเอกสาร</a></li>
     </ol>
   </nav>
+  <div class="container-fluid">
     <div class="card">
       <div class="card-header "> <!--card-header-danger-->
         <div class="card-title"> 
@@ -51,6 +52,8 @@
         </table>
       </div>
     </div>
+  </div>
+  
 
 </div>
     <!-- <div class="card-body">
