--- a/src/app/view/table-main/data-detail/data-detail.component.html
+++ b/src/app/view/table-main/data-detail/data-detail.component.html
@@ -26,7 +26,7 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-md-5">
-                                ฉบับเอกสารที่:
+                                เอกสารฉบับที่:
                             </div>
                             <div class="col-md-7">
                                 {{DataDetail?.record_id}}
