--- a/src/app/view/table-main/table-main.component.css
+++ b/src/app/view/table-main/table-main.component.css
@@ -15,7 +15,7 @@
     align-items: center;
     margin: 0 ;
     border-radius: 10px;
-    padding: 0.75rem 1.25rem 0;
+    padding: 0.75rem 1.25rem ;
   }
   .sub-title{
     position: relative;
@@ -40,7 +40,9 @@
     right: 230px;
     top: 45px;
   }
-
+.group-btn{
+  display: flex;
+}
   .modal-body {
     display: flex;
     justify-content: center;
