--- a/src/app/view/manageagency/addagency/addagency.component.css
+++ b/src/app/view/manageagency/addagency/addagency.component.css
@@ -55,6 +55,7 @@
       border-radius: 5px;
       font-size: 14px;
       font-family: 'Sarabun', sans-serif;
+      color: #5b5a5a;
     }
     .form-select:disabled {
       background-color: #ccc; /* Light gray color for disabled state */
@@ -145,18 +146,17 @@
     .footer-links {
       display: flex;
       justify-content: center;
-      margin-top: 15px;
+      /* margin-top: 8px; */
     }
     
-    .login-link {
+    .addagency-link {
       font-size: 0.8em;
       color:  #24a0ed;
       text-decoration: none;
     }
     
-    .login-link:hover {
+    .addagency-link:hover {
       text-decoration: underline;
     }
-    
   
     
