--- a/src/app/view/manageuser/addperson/addperson.component.css
+++ b/src/app/view/manageuser/addperson/addperson.component.css
@@ -55,7 +55,10 @@
       border-radius: 5px;
       font-size: 14px;
       font-family: 'Sarabun', sans-serif;
+      color:#5b5a5a;
     }
+
+    
     .form-select:disabled {
       background-color: #ccc; /* Light gray color for disabled state */
       cursor: not-allowed; /* Show a 'not-allowed' cursor when hovering over the disabled select */
@@ -141,22 +144,20 @@
     .btn-create-account:hover {
       background-color:  #24a0ed;;
     }
-    
+
+
     .footer-links {
       display: flex;
       justify-content: center;
-      margin-top: 15px;
+      /* margin-top: 8px; */
     }
     
-    .login-link {
+    .adduser-link {
       font-size: 0.8em;
       color:  #24a0ed;
       text-decoration: none;
     }
     
-    .login-link:hover {
+    .adduser-link:hover {
       text-decoration: underline;
     }
-    
-  
-    
