--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -11,7 +11,7 @@
 
         <div class="card">
             <div class="navigate-bar">
-                <button class="btn btn-add" (click)="BackRoot()">
+                <button class="btn btn-danger" (click)="BackRoot()">
                     <i class="fa fa-angle-left"></i> กลับ
                 </button>
             </div>
