--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -48,14 +48,19 @@ h4{
 .filter-container {
   position: relative;
   display: flex;
+  flex-wrap: nowrap;
   align-items: center;
   padding: 20px;
   background-color:white !important;
-  width: 100%;
-  height: 100%; /*150px*/
+  /*150px*/
+  height: 100%;
   border-radius: 10px;
   margin-left: 0;
   transform: 0.3s ease-in;
+  gap: 20px;
+}
+.filter-item{
+  margin-bottom: 15px;
 }
 /* dropDown */
 .dropdown {
