--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -15,7 +15,8 @@
             แสดงรายชื่อผู้ใช้งาน
           </div> -->
         </div>
-        <button (click)="openaddperson()" class="btn btn-add">เพิ่มผู้ใช้งาน</button>
+        <button (click)="openaddperson()" class="btn btn-add">
+          <i class="fa fa-plus"></i> &nbsp;เพิ่มผู้ใช้งาน</button>
       </div>
       <div class="card-body">
         <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
@@ -27,7 +28,7 @@
               <th style="width: 10%;">ชื่อ</th>
               <th style="width: 10%;">นามสกุล</th>
               <th style="width: 10%;">อีเมล</th>
-              <th style="width: 10%;">ระดับผู้ใช้งาน</th>
+              <th style="width: 12%;">ระดับผู้ใช้งาน</th>
               <th  style="width: 12%;">สถานะผู้ใช้งาน</th>
               <th  style="color: black;  font-size: 16px; text-align: center;"><i
                   class="fa fa-gear"></i></th>
