--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -8,21 +8,26 @@
       </nav>
 
     <div class="container-fluid">
+    
+  
 
         <div class="Detail-content card" [ngStyle]="{ width: '230mm' }">
             <!--[ngStyle]="{ width: '230mm', height: '327mm' , height: '297mm' }"-->
-               
-            <div class="modal-header card-header">
-                <button class="btn btn-danger" (click)="BackRoot()">
+            <div class="navigate">
+                <button class="btn btn-danger" style="display: flex; justify-content: center; align-items: center; " (click)="BackRoot()">
                     <i class="fa fa-angle-left"></i>
                 </button>
+                <button class="btn btn-add" (click)="onSignPage()">
+                    ไปที่หน้าการอัปโหลด &nbsp; &nbsp;<i class="fa fa-arrow-up-right-from-square"></i>
+                 </button>
+            </div>
+            <div class="modal-header card-header">
+             
                 <div class="card-title" id="myModalLabel">
                     <p style="margin: 0;" >เนื้อหาเอกสาร</p>
                 
                 </div>
-                <button class="btn btn-add" (click)="onSignPage()">
-                    ไปที่หน้าการอัปโหลด &nbsp; &nbsp;<i class="fa fa-arrow-up-right-from-square"></i>
-                 </button>
+              
                 <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="BackRoot()">
                     <span aria-hidden="true" style="color: black;">$times</span>
                 </button> -->
