--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -230,7 +230,7 @@
 
                     <div class="col-sm-12" style="position: relative; display: flex; justify-content: flex-end;">
                       <button type="button" (click)="addPersonInput()" [disabled]="!canAddPerson()"
-                        style="border: none; background: none;"> <!---->
+                        style="border: none; background: none;"> 
                         <i class="fa fa-plus"></i>
                       </button>
                       <button type="button" (click)="deletePersonInput()" style="border: none; background: none;">
@@ -374,6 +374,7 @@
                                  addItemForm.controls['location'].dirty || Submitted)"
                           class="text-validate">*</span>
                       </label>
+                    
                       <input type="text" id="location" formControlName="location" class="form-control"
                         placeholder="--เลือกสถานที่--"
                         [ngClass]="{'box-validate': addItemForm.controls['location'].invalid && 
@@ -385,10 +386,11 @@
                         *ngIf="addItemForm.controls['location'].invalid && 
                         (addItemForm.controls['location'].touched || 
                           addItemForm.controls['location'].dirty || Submitted)">กรุณาเลือกสถานที่</span>
+                            <button type="button" class="btn btn-add" (click)="getCurrentLocation()">
+                              <i class="fa fa-location-dot">&nbsp;</i>เลือกสถานที่
+                              ปัจจุบัน</button>
                     </div>
-                    <button type="button" class="btn btn-add" (click)="getCurrentLocation()">
-                      <i class="fa fa-location-dot">&nbsp;</i>เลือกสถานที่
-                      ปัจจุบัน</button>
+                   
 
 
 
