--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -59,67 +59,45 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <!---->
-                  <tr *ngFor="let item of items?.records ">
-
-
-                    <td style=" text-align: center;">
-
+                  <tr *ngFor="let item of items">
+                    <td style="text-align: center;">
                       {{item?.record_id}}
                     </td>
-                    <td style=" white-space: nowrap;">
-
-                      {{item?.record_topic }}
+                    <td style="white-space: nowrap;"> 
+                      {{item?.record_topic}}
                     </td>
                     <td style="vertical-align: middle; white-space: nowrap; text-align: center;">
-
                       {{item?.record_star_date | thaidate: "medium"}}
                     </td>
                     <td style="vertical-align: middle; white-space: nowrap; text-align: center;">
-
                       {{item?.record_end_date | thaidate: "medium"}}
                     </td>
-                    <!-- <td style=" white-space: nowrap; ">
-
-                      {{item?.firstname}}
-                    </td> -->
-
-                    <td class="text-center" style=" white-space: nowrap;">
-                    
+                    <td class="text-center" style="white-space: nowrap;">
                       <button class="searchLocation" (click)="searchLocation(item?.record_location)">ดูพิกัด</button>
-
                     </td>
                     <td style="vertical-align: middle; white-space: nowrap; text-align: center; justify-content: center;">
-                      <i *ngIf="item.record_filename" class="fa-regular fa-circle-check checkIcon"> &nbsp;<div
-                          style="font-family: 'Sarabun',sans-serif;">เซ็นสำเร็จ</div></i>
-                      <i *ngIf="!item.record_filename" class="fa-regular fa-circle-xmark cancleIcon"> &nbsp;<div
-                          style="font-family: 'Sarabun',sans-serif;">ยังไม่ได้เซ็น</div></i>
+                      <i *ngIf="item.record_filename" class="fa-regular fa-circle-check checkIcon"> &nbsp;
+                        <div style="font-family: 'Sarabun',sans-serif;">เซ็นสำเร็จ</div>
+                      </i>
+                      <i *ngIf="!item.record_filename" class="fa-regular fa-circle-xmark cancleIcon"> &nbsp;
+                        <div style="font-family: 'Sarabun',sans-serif;">ยังไม่ได้เซ็น</div>
+                      </i>
                     </td>
-
-                    <td class="text-center" style=" width:1% ;white-space: nowrap;">
+                    <td class="text-center" style="width:1% ;white-space: nowrap;">
                       <button (click)="openDataDetail(item?._id)" style="border: none; background: none; color: black;">
-                        <i  data-toggle="tooltip" title="ดูรายละเอียดเอกสาร" data-placement="top"
-                         class="fa fa-pencil"></i>
+                        <i data-toggle="tooltip" title="ดูรายละเอียดเอกสาร" data-placement="top"
+                          class="fa fa-pencil"></i>
                       </button>
-
                       <button *ngIf="!item.record_filename" (click)="onRecord(item?._id)" style="border: none; background: none; color: black;">
                         <i data-toggle="tooltip" title="การจดบันทึก" data-placement="top"
                           class="fa fa-pencil-square-o Record"></i>
                       </button>
-
-
                       <button *ngIf="!item.record_filename" (click)="openDetailModal(item?._id)" style="border: none; background: none; color: black;">
                         <i data-toggle="tooltip" title="เพิ่มเนื้อหา" data-placement="top"
-                          class="fa fa-file-text-o ModalIcon "></i>
+                          class="fa fa-file-text-o ModalIcon"></i>
                       </button>
-
-
-
-
-                      <button *ngIf="item.record_filename" style="border: none; background: none; color: black; ">
-
-                        <i class="fa  fa-file-pdf-o" (click)="showPDF(item.record_filename)"></i>
-
+                      <button *ngIf="item.record_filename" style="border: none; background: none; color: black;">
+                        <i class="fa fa-file-pdf-o" (click)="showPDF(item.record_filename)"></i>
                       </button>
                     </td>
                   </tr>
