--- a/src/app/signature/signature.component.css
+++ b/src/app/signature/signature.component.css
@@ -288,3 +288,14 @@ input[type="number"] {
   justify-content: center;
   margin-top: 15px;
 }
+
+:host ::ng-deep .pdfViewer.removePageBorders {
+  border: 1px solid black; /* กำหนดขอบให้สม่ำเสมอทุกด้าน */
+  box-sizing: border-box;  /* เพื่อให้ขอบและ padding รวมอยู่ในขนาดขององค์ประกอบ */
+  width: 210mm; /* กำหนดความกว้างให้เท่ากับขนาดกระดาษ A4 */
+  height: 297mm; /* กำหนดความสูงให้เท่ากับขนาดกระดาษ A4 */
+  overflow: hidden; /* ป้องกันไม่ให้เนื้อหาล้นขอบ */
+ 
+  position: relative;
+  left: 20%;
+}
