--- a/src/app/view/table-main/data-detail/data-detail.component.html
+++ b/src/app/view/table-main/data-detail/data-detail.component.html
@@ -40,10 +40,26 @@
 
                         <div class="row mb-2">
                             <div class="col-md-5 font-weight-bold">
-                                เอกสารฉบับที่:
+                               ครั้งที่: <!-- เอกสารฉบับที่-->
                             </div>
                             <div class="col-md-7">
                                 {{ DataDetail?.record_id }}
+                            </div>
+                        </div>
+                        <div class="row mb-2">
+                            <div class="col-md-5 font-weight-bold">
+                                วันที่เริ่มตรวจสอบ:
+                            </div>
+                            <div class="col-md-7">
+                                {{ DataDetail?.record_star_date | thaidate: 'medium' }}
+                            </div>
+                        </div>
+                        <div class="row mb-2">
+                            <div class="col-md-5 font-weight-bold">
+                                วันที่เสร็จสิ้นการตรวจสอบ:
+                            </div>
+                            <div class="col-md-7">
+                                {{ DataDetail?.record_end_date | thaidate: 'medium' }}
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -78,22 +94,7 @@
                                 {{ DataDetail?.record_location }}
                             </div>
                         </div>
-                        <div class="row mb-2">
-                            <div class="col-md-5 font-weight-bold">
-                                วันที่เริ่มตรวจสอบ:
-                            </div>
-                            <div class="col-md-7">
-                                {{ DataDetail?.record_star_date | thaidate: 'medium' }}
-                            </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-md-5 font-weight-bold">
-                                วันที่เสร็จสิ้นการตรวจสอบ:
-                            </div>
-                            <div class="col-md-7">
-                                {{ DataDetail?.record_end_date | thaidate: 'medium' }}
-                            </div>
-                        </div>
+                   
                         <div class="row">
                             <div class="col-md-5 font-weight-bold">
                                 รายชื่อผู้ลงนาม:
@@ -235,7 +236,17 @@
                                             </div>
                                         </div>
 
-
+                                        <div class="row">
+                                            <div class="col-sm-12" style="position: relative; display: flex; justify-content: flex-end;">
+                                                <button type="button" (click)="addPersonInput()" [disabled]="!canAddPerson()"
+                                                  style="border: none; background: none;"> 
+                                                  <i class="fa fa-plus"></i>
+                                                </button>  
+                                                  <button type="button" (click)="deletePersonInput()" style="border: none; background: none;">
+                                                         <i class="fa fa-minus"></i>
+                                                     </button>                       
+                                            </div>
+                                        </div>
                                         <div class="row inputLabel" [formGroup]="editItemForm">
                                             <div class="col-sm-4">
                                                 <label>
@@ -260,14 +271,15 @@
                                                         class="text-validate"> *</span>
                                                 </label>
                                             </div>
+                                    
 
 
                                         </div>
 
-                                        <div class="row">
-                                            <div *ngFor="let person of editItemForm.get('personal')['controls']; let i = index"
+                                        <div class="row" formArrayName="personal">
+                                            <div *ngFor="let person of personal.controls;  let i = index"
                                                 [formGroup]="editItemForm" [formGroupName]="i">
-                                                <div class="row " [formGroup]="person">
+                                                <div class="row " [formGroup]="person" style="padding: 0 15px 0 15px;">
                                                     <div class="col-sm-4">
                                                         <div class="form-group position-relative">
 
