--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -4,7 +4,7 @@
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
       <li class="breadcrumb-item"><a [routerLink]="['/table-main']">การลงตรวจอิเล็กทรอนิค</a></li>
-      <li class="breadcrumb-item"><a [routerLink]="['/table-detail']">เนื้อหาเอกสาร</a></li>
+      <li class="breadcrumb-item"><a (click)="BackRoot()">เนื้อหาเอกสาร</a></li>
       <li class="breadcrumb-item active"><a aria-current="page">หน้าเอกสารการอัปโหลด</a></li>
     </ol>
   </nav>
