--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="navigate-bar">
                 <button class="btn btn-danger" (click)="BackRoot()">
-                    <i class="fa fa-angle-left"></i> กลับ
+                    <i class="fa fa-arrow-left"></i> กลับ
                 </button>
             </div>
             <div class="card-header">
