--- a/src/app/view/table-main/data-detail/data-detail.component.html
+++ b/src/app/view/table-main/data-detail/data-detail.component.html
@@ -9,8 +9,8 @@
     <div class="container-fluid">
         <div class="card">
             <div class="navigate-bar">
-                <button type="button" 
-                    style="display: flex; justify-content: center; align-items: center;background: transparent; border: none; color: rgb(137, 135, 135); " (click)="BackRoot()">
+                <button type="button"  class="BackPage"
+                    (click)="BackRoot()">
                     <i class="fa fa-arrow-left"> ย้อนกลับ</i>
                 </button>
             </div>
