--- a/src/app/view/table-main/data-detail/data-detail.component.css
+++ b/src/app/view/table-main/data-detail/data-detail.component.css
@@ -117,6 +117,18 @@
    z-index: 1;
   
   }
+  .BackPage{
+    display: flex;
+     justify-content: center; 
+     align-items: center;
+     background: transparent;
+      border: none; 
+      color: rgb(137, 135, 135);
+    padding-left: 20px;
+  }
+  .BackPage:hover{
+    color: black;
+  }
 :host ::ng-deep .btn-add{
     color: #fff;
     background-color: rgb(24,144,255) ;/*#000dc2ef rgb(24,144,255)  #24a0ed */
