29//08 problem dashboard not solve

--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -113,7 +113,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div>
                     <p class="title mb-0">เอกสารทั้งหมด</p>
-                    <h2 class="amount">{{ totalDocuments }}</h2>
+                    <h2 class="amount">{{ totalDocuments }}</h2> <!--recordCount-->
                   </div>
                   <div class="imgBG">
                     <img src="./assets/img/manage.png" alt="paper" class="paper-img">
@@ -150,7 +150,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div>
                     <p class="title mb-0">จำนวนกระดาษ</p>
-                    <h2 class="amount">1,234</h2>
+                    <h2 class="amount">14</h2>
                   </div>
                   <div class="imgBG">
                     <img src="./assets/img/paper.png" alt="paper" class="paper-img">
