29//08 14:31 commit it can't meger mike for sure

--- a/src/app/signature/signature.component.css
+++ b/src/app/signature/signature.component.css
@@ -64,6 +64,19 @@
   .card{
     font-family: 'Sarabun',sans-serif;
   }
+  a:hover{
+    cursor: pointer;
+    color: #9c27b0;
+  }
+  .BackPage{
+    display: flex;
+     justify-content: center; 
+     align-items: center;
+     background: transparent;
+      border: none; 
+      color: rgb(137, 135, 135);
+    padding-left: 20px;
+  }
   .signTool-content{
     display: flex;
     flex-direction: column;
