--- a/src/app/view/table-detail/table-detail.component.css
+++ b/src/app/view/table-detail/table-detail.component.css
@@ -17,6 +17,18 @@
   margin: 0 ;
   border-radius: 10px;
 }
+.BackPage{
+  display: flex;
+   justify-content: center; 
+   align-items: center;
+   background: transparent;
+    border: none; 
+    color: rgb(137, 135, 135);
+  padding-left: 20px;
+}
+.BackPage:hover{
+  color: black;
+}
 /* .card-header{
   position: relative;
   background-color: rgb(255, 209, 0);
