--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -14,8 +14,8 @@
         <div class="Detail-content card" [ngStyle]="{ width: '230mm' }">
             <!--[ngStyle]="{ width: '230mm', height: '327mm' , height: '297mm' }"-->
             <div class="navigate">
-                <button class="btn btn-danger" style="display: flex; justify-content: center; align-items: center; " (click)="BackRoot()">
-                    <i class="fa fa-angle-left"></i>
+                <button class="BackPage" (click)="BackRoot()">
+                    <i class="fa fa-arrow-left">ย้อนกลับ</i>
                 </button>
                 <button class="btn btn-add" (click)="onSignPage()">
                     ไปที่หน้าการอัปโหลด &nbsp; &nbsp;<i class="fa fa-arrow-up-right-from-square"></i>
