--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -4,7 +4,7 @@
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
       <li class="breadcrumb-item"><a [routerLink]="['/table-main']">การลงตรวจอิเล็กทรอนิค</a></li>
-      <li class="breadcrumb-item"><a [routerLink]="['/table-detail']">เนื้อหาเอกสาร</a></li>
+      <li class="breadcrumb-item"><a (click)="BackRoot()">เนื้อหาเอกสาร</a></li>
       <li class="breadcrumb-item active"><a aria-current="page">หน้าเอกสารการอัปโหลด</a></li>
     </ol>
   </nav>
@@ -19,7 +19,9 @@
       </div>
     <div class="card">
    
-
+      <button class="BackPage" type="button">
+        <i class="fa fa-arrow-left"> &nbsp; ย้อนกลับ</i>
+      </button>
       <div class="card-body">
         <div class="signTool-content" *ngIf="loading">
           <div class="pageNumber">
