--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -9,7 +9,7 @@
     <div class="card">
       <div class="card-header "><!--card-header-danger-->
         <div class="card-title">  
-          <a href=""> จัดการรายชื่อองค์กร</a>
+          <a href=""> จัดการข้อมูลผู้ใช้งาน</a>
         
           <!-- <div class="sub-title">
             แสดงรายชื่อผู้ใช้งาน
