--- a/src/app/view/manageagency/manageagency.component.css
+++ b/src/app/view/manageagency/manageagency.component.css
@@ -170,3 +170,11 @@ td select option {
   color: black;
 }
 
+
+
+.modal-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Sarabun", sans-serif;
+}
