--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -140,7 +140,7 @@
                                     </div> -->
                                 <div class="group-info">
                                     <div class="title-info">
-                                        <h4>ข้อมูลสถานที่ทำงาน</h4>
+                                        <!-- <h4>ข้อมูลสถานที่ทำงาน</h4> -->
                                     </div>
                                     <div class="row">
                                         <div class="col-md-3">
@@ -164,9 +164,6 @@
                                         <div class="col-md-3">
                                             <label for=""></label>
                                         </div>
-
-
-
                                         <div class="col-md-5">
                                             ตำบล/แขวง : {{getTambonName(UserData?.employeeId?.tambon)}}
                                         </div>
@@ -179,16 +176,14 @@
                                         <div class="col-md-3">
                                             <label for=""></label>
                                         </div>
-
-
-
-
                                         <!-- <div class="col-md-4" >
                                                 รหัสไปรษณีย์ :
                                                 <div class="form-control">{{ UserInfoForm.controls['postCode'].value }}
                                                 </div>
                                                 <input type="text"formControlName="postCode"  class="form-control"  placeholder="รหัสไปรษณีย์"> 
                                             </div> -->
+                                       
+                                    
                                         <div class="col-md-5">
                                             จังหวัด : {{getProvinceName(UserData?.employeeId?.province)}}
                                         </div>
@@ -201,7 +196,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="title-info">
-                                            <h4>ข้อมูลติดต่อ</h4>
+                                            <!-- <h4>ข้อมูลติดต่อ</h4> -->
                                         </div>
                                     </div>
 
