--- a/src/app/view/table-detail/table-detail.component.css
+++ b/src/app/view/table-detail/table-detail.component.css
@@ -116,6 +116,7 @@ width: 180px;
 
   bottom: 50px;
   height: auto;
+  width: 100%;
   margin: 50px 0 50px 0;
   left: 50%;
   transform: translateX(-50%);
@@ -135,8 +136,18 @@ width: 180px;
 }
 
 
-
-
+.BackPage{
+  display: flex;
+   justify-content: center; 
+   align-items: center;
+   background: transparent;
+    border: none; 
+    color: rgb(137, 135, 135);
+  padding-left: 20px;
+}
+.BackPage:hover{
+  color: black;
+}
 
 
 
