--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -8,13 +8,13 @@
       </nav>
 
     <div class="container-fluid">
-
+        
         <div class="Detail-content card" [ngStyle]="{ width: '230mm' }">
             <!--[ngStyle]="{ width: '230mm', height: '327mm' , height: '297mm' }"-->
                
             <div class="modal-header card-header">
-                <button class="btn btn-danger" (click)="BackRoot()">
-                    <i class="fa fa-angle-left"></i>
+                <button class="BackPage" (click)="BackRoot()">
+                    <i class="fa fa-arrow-left">&nbsp; ย้อนกลับ</i>
                 </button>
                 <div class="card-title" id="myModalLabel">
                     <p style="margin: 0;" >เนื้อหาเอกสาร</p>
