--- a/src/app/signature/signature.component.css
+++ b/src/app/signature/signature.component.css
@@ -66,16 +66,16 @@
   }
   a:hover{
     cursor: pointer;
-    color: #9c27b0;
+    color: #9c27b0 !important;
   }
   .BackPage{
     display: flex;
-     justify-content: center; 
+     /* justify-content: center;  */
      align-items: center;
      background: transparent;
       border: none; 
       color: rgb(137, 135, 135);
-    padding-left: 20px;
+    padding: 20px;
   }
   .signTool-content{
     display: flex;
