--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -11,13 +11,13 @@
 
         <div class="card">
             <div class="navigate-bar">
-                <button class="btn btn-danger" (click)="BackRoot()">
-                    <i class="fa fa-arrow-left"></i> กลับ
+                <button class="ฺBackPage r" (click)="BackRoot()">
+                    <i class="fa fa-arrow-left"></i> ย้อนกลับ
                 </button>
             </div>
             <div class="card-header">
             
-                <h4 class="card-title">การจัดการผู้ใช้งาน</h4>
+                <p class="card-title">การจัดการผู้ใช้งาน</p>
                 <!-- <button class="btn btn-primary" (click)="goToChangePassword()">เปลี่ยนรหัสผ่าน</button> -->
               </div>
             <div class="card-body">
