--- a/src/app/view/table-main/data-detail/data-detail.component.html
+++ b/src/app/view/table-main/data-detail/data-detail.component.html
@@ -15,12 +15,12 @@
                 </button>
             </div>
 
-            <div class="card-header">
+            <!-- <div class="card-header">
                 <div class="card-title">
-                    <p> รายละเอียดเนื้อหาเอกสารที่สร้าง</p>
+                
                 </div>
 
-            </div>
+            </div> -->
             <div class="card-body">
           
                 <div class="row">
@@ -28,7 +28,7 @@
                     <div class="col-md-8">
                         <div class="row mb-3">
                             <div class="col-md-6">
-                                ข้อมูล
+                                <p> รายละเอียดเนื้อหาเอกสารที่สร้าง</p>
                             </div>
                             <div class="col-md-6" style="display: flex; justify-content: flex-end;">
                                 <button type="button" class="btn btn-warning" (click)="openEditModal()"
