--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -19,7 +19,7 @@
       </div>
     <div class="card">
       <button type="button" class="BackPage">
-        <i class="fa fa-arrow-left"> &nbsp; ย้อนกลับ1</i>
+        <i class="fa fa-arrow-left"> &nbsp; ย้อนกลับ</i>
       </button>
 
       <div class="card-body">
