--- a/src/app/view/manageuser/manageuser.component.css
+++ b/src/app/view/manageuser/manageuser.component.css
@@ -26,7 +26,7 @@ h4{
   align-items: self-start;
   color: #7B809A;
 }
-.card-title a{
+.card-title p{
   font-family: "Sarabun", sans-serif; 
   font-weight: 900;
   font-size: 18px;
@@ -115,6 +115,56 @@ th, td {
   width: 50px; /* Adjust the width as needed */
   text-align: center;
 }
+
+/*Modal style*/
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+  font-family: 'Sarabun', sans-serif;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+}  
+
+.form-group input {
+  width: calc(100% - 20px);
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+}
+.form-select{
+  width: calc(100% - 20px);
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+  color:#5b5a5a;
+}
+
+
+.form-select:disabled {
+  background-color: #ccc; /* Light gray color for disabled state */
+  cursor: not-allowed; /* Show a 'not-allowed' cursor when hovering over the disabled select */
+}
+
+/*invalidate style*/
+.error-text{
+      font-size: 14px;
+      font-family: 'Sarabun', sans-serif;
+      color: red;
+}
+.form-group input.box-validate {
+      border: 1px solid red;
+      border-radius: 5px;
+}
+
 
 :host ::ng-deep .btn-add{
   color: rgb(255, 255, 255);
