--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -140,7 +140,7 @@
                                     </div> -->
                                 <div class="group-info">
                                     <div class="title-info">
-                                        <h4>ข้อมูลสถานที่ทำงาน</h4>
+                                        <!-- <h4>ข้อมูลสถานที่ทำงาน</h4> -->
                                     </div>
                                     <div class="row">
                                         <div class="col-md-3">
@@ -201,7 +201,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="title-info">
-                                            <h4>ข้อมูลติดต่อ</h4>
+                                            <!-- <h4>ข้อมูลติดต่อ</h4> -->
                                         </div>
                                     </div>
 
@@ -228,28 +228,7 @@
                                 </div>
 
 
-                                <!-- <div class="row" *ngIf="EditStatus">
-                            <div class="col-md-12">
-                                <div class="title-info">
-                                    <h4>เปลี่ยนรูปภาพโปรไฟล์</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row"  *ngIf="EditStatus">
-                            <div class="col-md-3">
-                                <label for="">อัปโหลดรูปภาพโปรไฟล์</label>
-                            </div>
-                            <div class="col-md-9">
-                                <input type="file" id="profileImage" formControlName="profileImage"  
-                                accept="image/png, image/jpeg, image/jpg" 
-                                (change)="onFileUploadImgChange($event)">
-
-                                <div class="profile-image-container" *ngIf="imageSrc">
-                                    <img [src]="imageSrc" alt="Profile Img" class="profile-image">
-                                    <i class="fa-regular fa-trash-can positionTrashCan" (click)="deletedFileUpload(fileInput)"></i>
-                                  </div>
-                            </div>
-                        </div> -->
+                        
 
 
                             </div>
@@ -295,7 +274,7 @@
 
                                 <div class="group-info">
                                     <div class="title-info">
-                                        <h4>ข้อมูลสถานที่ทำงาน</h4>
+                                        <!-- <h4>ข้อมูลสถานที่ทำงาน</h4> -->
                                     </div>
                                     <div class="row">
                                         <div class="col-md-3">
