30//08 หน้าบ้านอย่างเดียว

--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -18,7 +18,7 @@
         </button>
       </div>
     <div class="card">
-      <button type="button" class="BackPage">
+      <button type="button" (click)="BackRoot()" class="BackPage">
         <i class="fa fa-arrow-left"> &nbsp; ย้อนกลับ</i>
       </button>
 
