--- a/src/app/view/table-main/data-detail/data-detail.component.html
+++ b/src/app/view/table-main/data-detail/data-detail.component.html
@@ -27,8 +27,8 @@
                     <!-- ข้อมูลเอกสาร -->
                     <div class="col-md-8">
                         <div class="row mb-3">
-                            <div class="col-md-6">
-                                <p> รายละเอียดเนื้อหาเอกสารที่สร้าง</p>
+                            <div class="col-md-6" style="display: flex;"> 
+                                <p style="display: flex; margin: 0; align-items: center; font-size: 18px; font-weight: 900;"> รายละเอียดเนื้อหาเอกสารที่สร้าง</p>
                             </div>
                             <div class="col-md-6" style="display: flex; justify-content: flex-end;">
                                 <button type="button" class="btn btn-warning" (click)="openEditModal()"
