--- a/src/app/view/manageagency/manageagency.component.css
+++ b/src/app/view/manageagency/manageagency.component.css
@@ -69,6 +69,41 @@ th, td {
   width: 50px; /* Adjust the width as needed */
   text-align: center;
 }
+/*for modal*/
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+  font-family: 'Sarabun', sans-serif;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+}  
+
+.form-group input {
+  width: calc(100% - 0px);
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+}
+.form-select{
+  width: calc(100% - 0px);
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+  color: #5b5a5a;
+}
+.form-select:disabled {
+  background-color: #ccc; /* Light gray color for disabled state */
+  cursor: not-allowed; /* Show a 'not-allowed' cursor when hovering over the disabled select */
+}
 
 :host ::ng-deep .btn-add{
   color: rgb(255, 255, 255);
