--- a/src/app/view/manageagency/manageagency.component.html
+++ b/src/app/view/manageagency/manageagency.component.html
@@ -2,28 +2,31 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
-      <li class="breadcrumb-item active"><a aria-current="page" > จัดการองค์กร</a></li>
+      <li class="breadcrumb-item active"><a aria-current="page"> จัดการองค์กร</a></li>
     </ol>
   </nav>
   <div class="container-fluid">
     <div class="card">
       <div class="card-header "><!--card-header-danger-->
-        <div class="card-title">  
-          <a href=""> จัดการข้อมูลองค์กร</a>
-        
+        <div class="card-title">
+          <a href=""> จัดการข้อมูลหน่อยงาน</a>
+
           <!-- <div class="sub-title">
             แสดงรายชื่อผู้ใช้งาน
           </div> -->
         </div>
-        <button (click)="openaddagency()" class="btn btn-add">
-        เพิ่มข้อมูลองหน่อยงาน</button>
+        <!-- <button (click)="openaddagency()" class="btn btn-add">
+          เพิ่มข้อมูลองหน่อยงาน</button> -->
+        <button (click)="openAddAgencyModal()" class="btn btn-add">
+          เพิ่มผู้ใช้งาน</button>
       </div>
       <div class="card-body">
-        <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
+        <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered"
+          *ngIf="!loading">
           <thead>
-  
+
             <tr>
-              <th  style="text-align: center; width: 5%;">ลำดับ</th>
+              <th style="text-align: center; width: 5%;">ลำดับ</th>
               <th style="width: 10%;">ชื่อ</th>
               <th style="width: 10%;">เบอร์โทรศัพท์</th>
               <th style="width: 10%;">อีเมล</th>
@@ -33,23 +36,172 @@
           </thead>
           <tbody>
             <tr *ngFor="let agency of agency ; let i = index">
-              <td  style="text-align: center; width: 5%;">{{ i + 1 }}</td>
+              <td style="text-align: center; width: 5%;">{{ i + 1 }}</td>
               <td> {{ agency.agency_name }} </td>
               <td> {{ agency.phone }} </td>
               <td> {{ agency.email }} </td>
-            
-          
-               <!-- <td class="small-cell-text"> 
+
+
+              <!-- <td class="small-cell-text"> 
               <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
                 <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
                   class="fa fa-file-text-o ModalIcon "></i>
               </button>
             </td>   -->
-              </tr>
-            </tbody>
+            </tr>
+          </tbody>
         </table>
+
+        <div class="modal fade" id="manageAgencyModel" tabindex="-1" role="dialog" aria-labelledby="addItemModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header" class="card-header">
+                <h5 class="modal-title" id="addItemModalLabel"
+                  style="color: rgb(0, 0, 0); font-family: 'Sarabun', sans-serif !important; font-size: 18px; font-weight: 900;">
+                  เพิ่มข้อมูลหน่อยงาน</h5>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color: black;">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <form [formGroup]="agenForm" (ngSubmit)="onSubmit(agenForm.value)">
+                <div class="modal-body">
+
+
+
+                  <div class="row box">
+                    <div class="row">
+                        <div class="form-group">
+                        <label for="agency_name" style="font-size: 16px;">ชื่อองค์กร</label>
+                        <input type="text" id="agency_name" formControlName="agency_name" required
+                          placeholder="กรอกอีเมลของคุณ">
+                        <div
+                          *ngIf="agenForm.get('agency_name')?.invalid && (agenForm.get('agency_name')?.touched || agenForm.get('agency_name')?.dirty)">
+                          <small class="error-text">กรุณากรอกข้อมูล**</small>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6" style="padding-right: 0;">
+                        <div class="form-group">
+                          <label for="email" style="font-size: 16px;">อีเมล</label>
+                          <input type="email" id="email" formControlName="email" required
+                            placeholder="กรอกรหัสผ่านของคุณ">
+                          <div
+                            *ngIf="agenForm.get('email')?.invalid && (agenForm.get('email')?.touched || agenForm.get('email')?.dirty)">
+                            <small class="error-text">กรุณากรอกข้อมูล**</small>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-6" style="padding-right: 0;">
+                        <div class="form-group">
+                          <label for="phone" style="font-size: 16px;">เบอร์โทรศัพท์</label>
+                          <input type="text" id="phone" formControlName="phone" required placeholder="กรอกรหัสผ่านของคุณ">
+                          <div
+                            *ngIf="agenForm.get('phone')?.invalid && (agenForm.get('phone')?.touched || agenForm.get('phone')?.dirty)">
+                            <small class="error-text">กรุณากรอกข้อมูล**</small>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+
+                  
+                   
+                  </div>
+
+
+                  <div class="row box">
+                    <div class="row">
+                      <div class="col-sm-12" style="padding-right: 0;">
+                        <div class="form-group">
+                          <label for="address" style="font-size: 16px;">ที่ตั้งองค์กร</label>
+                          <input type="text" id="address" formControlName="address" required placeholder="กรอกที่อยู่">
+                          <div
+                            *ngIf="agenForm.get('address')?.invalid && (agenForm.get('address')?.touched || agenForm.get('address')?.dirty)">
+                            <small class="error-text">กรุณากรอกข้อมูล****</small>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                 
+                    
+                          <div class="col-sm-3">
+                            <div class="form-group">
+                              <label for="province" style="font-size: 16px;">จังหวัด</label>
+                              <select class="form-select" formControlName="province"
+                                (change)="onProvinceChange($event.target.value)">
+                                <option value="" disabled selected>จังหวัด</option>
+                                <option *ngFor="let province of provinces" [value]="province.id">{{ province.name_th }}
+                                </option>
+                              </select>
+                            </div>
+                          </div>
+  
+                          <div class="col-sm-3" style="padding-left: 0;">
+                            <div class="form-group">
+                              <label for="amphure" style="font-size: 16px;">อำเภอ/เขต</label>
+                              <select class="form-select" formControlName="amphure"
+                                (change)="onAmphuresChange($event.target.value)"
+                                [attr.disabled]="isAmphureDisabled ? true : null">
+                                <option value="" disabled selected>อำเภอ/เขต</option>
+                                <option *ngFor="let amphure of amphures" [value]="amphure.id">{{ amphure.name_th}}
+                                </option>
+                              </select>
+                            </div>
+                          </div>
+  
+                          <div class="col-sm-3">
+                            <div class="form-group">
+                              <label for="tambon" style="font-size: 16px;">ตำบล/แขวง</label>
+                              <select class="form-select" formControlName="tambon"
+                                (change)="onTambonChange($event.target.value)"
+                                [attr.disabled]="isTambonDisabled ? true : null">
+                                <option value="" disabled selected>ตำบล/แขวง</option>
+                                <option *ngFor="let tambon of tambons" [value]="tambon.id">{{ tambon.name_th }}</option>
+                              </select>
+                            </div>
+                          </div>
+  
+                          <div class="col-sm-3" style="padding-left: 0;">
+                            <div class="form-group">
+                              <label for="postCode" style="font-size: 16px;">รหัสไปรษณีย์</label>
+                              <select class="form-select" formControlName="postCode"
+                                [attr.disabled]="isPostCodeDisabled ? true : null">
+                                <option value="" disabled selected>รหัสไปรษณีย์</option>
+                                <option *ngFor="let code of postCode" [value]="code">{{ code }}</option>
+                              </select>
+                            </div>
+                          </div>
+  
+                       
+                    
+
+                    </div>
+                 
+
+
+                  
+                  </div>
+
+
+
+
+
+
+
+
+                </div>
+                <div class="modal-footer">
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  
-  </div>
+
+</div>
