--- a/src/app/view/manageuser/manageuser.component.css
+++ b/src/app/view/manageuser/manageuser.component.css
@@ -117,6 +117,11 @@ th, td {
 }
 
 /*Modal style*/
+ 
+.box:focus-within{
+  background-color: #f1f5ff;
+  border-radius: 5px;
+}
 .form-group {
   margin-bottom: 15px;
   text-align: left;
@@ -131,7 +136,8 @@ th, td {
 }  
 
 .form-group input {
-  width: calc(100% - 20px);
+  display: block;
+  width: calc(100% - 0px);
   padding: 8px 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -139,7 +145,7 @@ th, td {
   font-family: 'Sarabun', sans-serif;
 }
 .form-select{
-  width: calc(100% - 20px);
+  width: calc(100% - 0px);
   padding: 8px 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
