--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -11,13 +11,15 @@
 
         <div class="card">
             <div class="navigate-bar">
-                <button class="ฺBackPage r" (click)="BackRoot()">
-                    <i class="fa fa-arrow-left"></i> ย้อนกลับ
+                <button class="BackPage" (click)="BackRoot()">
+                    <i class="fa fa-arrow-left"></i>  &nbsp; ย้อนกลับ
                 </button>
             </div>
             <div class="card-header">
             
-                <p class="card-title">การจัดการผู้ใช้งาน</p>
+                <div class="card-title">
+                    <p>การจัดการผู้ใช้งาน</p>
+                </div>
                 <!-- <button class="btn btn-primary" (click)="goToChangePassword()">เปลี่ยนรหัสผ่าน</button> -->
               </div>
             <div class="card-body">
