--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -2,7 +2,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
-            <li class="breadcrumb-item active"><a aria-current="page">หน้าผู้ใช้งาน</a></li>
+            <li class="breadcrumb-item active"><a aria-current="page">การจัดการผู้ใช้งาน</a></li>
         </ol>
     </nav>
     <div class="container-fluid">
